frontend: fix manage backup buttons
On the manage backups view the buttons have no space and on restore
from backup the buttons are too big. The gap CSS attribute only works
in newer webkit versions.

- changed from gap to margin to fix spacing issue
- removed button height on the restore backup from sd card, so that
  the button uses the default button height

--- a/frontends/web/src/components/steps/steps.css
+++ b/frontends/web/src/components/steps/steps.css
@@ -336,7 +336,6 @@
 }
 
 .step button {
-    height: var(--wizard-item-height);
     font-size: var(--size-wizard-text);
 }
 
